sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: not enough arguments for method plusPetit: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameter x$2.
      if (plusPetit(getValeur(i,i+1)))
                   ^