sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
  for(i<-1 to (getNombreValeurs()-1))
  	{
      if (plusPetit(getValeur(i,i+1)))
      	{
          echange(i,i+1)
        }
    }
}